opam-version: "2.0"
name: "mutables"
version: "0.1"
synopsis: "mutable data structures"
description: """
Mutable data structures such as Que, Stack and Dict
"""
maintainer: "Shuntaro Katsuda"
authors: "Shuntaro Katsuda"
license: "MIT"
homepage: "https://github.com/katshun0307/mutables"
bug-reports: "https://github.com/katshun0307/mutables/issues"
dev-repo: "git+https://github.com/katshun0307/mutables.git"
depends: [ "ocaml" "ocamlfind" "core" ]
build: ["dune" "build" "-p" name]
